Fix incorrect spacing of written pages

--- a/frontend/src/pages/Guide/Guide.module.css
+++ b/frontend/src/pages/Guide/Guide.module.css
@@ -8,7 +8,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     gap: 10px;
     margin: 10px 0px;
